[gd_scene load_steps=8 format=2]

[ext_resource path="res://meshes/m0.meshlib" type="MeshLibrary" id=1]
[ext_resource path="res://prepa/box.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/scene0.gd" type="Script" id=4]
[ext_resource path="res://solo_env.tres" type="Environment" id=5]
[ext_resource path="res://meshes/d0.meshlib" type="MeshLibrary" id=6]
[ext_resource path="res://extras/bb_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://scripts/netUI.gd" type="Script" id=8]

[node name="scene0" type="Spatial"]
script = ExtResource( 4 )

[node name="GridMap2" type="GridMap" parent="."]
mesh_library = ExtResource( 6 )
data = {
"cells": PoolIntArray( 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 25, 0, 0, 26, 0, 1610612736, 27, 0, 0, 65527, 0, 0, 65528, 0, 0, 65529, 0, 0, 65530, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 65527, 1, 0, 65528, 1, 0, 65529, 1, 0, 65530, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 0, 65530, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 65527, 3, 0, 65528, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 19, 4, 0, 20, 4, 0, 21, 4, 0, 22, 4, 0, 23, 4, 0, 24, 4, 0, 25, 4, 0, 26, 4, 0, 27, 4, 0, 65527, 4, 0, 65528, 4, 0, 65529, 4, 0, 65530, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 19, 5, 0, 20, 5, 0, 21, 5, 0, 22, 5, 0, 23, 5, 0, 24, 5, 0, 25, 5, 0, 26, 5, 0, 27, 5, 0, 65527, 5, 0, 65528, 5, 0, 65529, 5, 0, 65530, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 5, 0, 65534, 5, 0, 65535, 5, 0, 19, 6, 0, 20, 6, 0, 21, 6, 0, 22, 6, 0, 23, 6, 0, 24, 6, 0, 25, 6, 0, 26, 6, 0, 27, 6, 0, 65527, 6, 0, 65528, 6, 0, 65529, 6, 0, 65530, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 65535, 6, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 22, 7, 0, 23, 7, 0, 24, 7, 0, 25, 7, 0, 26, 7, 0, 27, 7, 0, 65527, 7, 0, 65528, 7, 0, 65529, 7, 0, 65530, 7, 0, 65531, 7, 0, 65532, 7, 0, 65533, 7, 0, 65534, 7, 0, 65535, 7, 0, 19, 8, 0, 20, 8, 0, 21, 8, 0, 22, 8, 0, 23, 8, 0, 24, 8, 0, 25, 8, 0, 26, 8, 0, 27, 8, 0, 65527, 8, 0, 65528, 8, 0, 65529, 8, 0, 65530, 8, 0, 65531, 8, 0, 65532, 8, 0, 65533, 8, 0, 65534, 8, 0, 65535, 8, 0, 19, 9, 0, 20, 9, 0, 21, 9, 0, 22, 9, 0, 23, 9, 0, 24, 9, 0, 25, 9, 0, 26, 9, 0, 27, 9, 0, 65527, 9, 0, 65528, 9, 0, 65529, 9, 0, 65530, 9, 0, 65531, 9, 0, 65532, 9, 0, 65533, 9, 0, 65534, 9, 0, 65535, 9, 0, 19, 10, 0, 20, 10, 0, 21, 10, 0, 22, 10, 0, 23, 10, 0, 24, 10, 0, 25, 10, 0, 26, 10, 0, 27, 10, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 19, 11, 0, 20, 11, 0, 21, 11, 0, 22, 11, 0, 23, 11, 0, 24, 11, 0, 25, 11, 0, 26, 11, 0, 27, 11, 0, 65527, 11, 0, 65528, 11, 0, 65529, 11, 0, 65530, 11, 0, 65531, 11, 0, 65532, 11, 0, 65533, 11, 0, 65534, 11, 0, 65535, 11, 0, 19, 12, 0, 20, 12, 0, 21, 12, 0, 22, 12, 0, 23, 12, 0, 24, 12, 0, 25, 12, 0, 26, 12, 0, 27, 12, 0, 65527, 12, 0, 65528, 12, 0, 65529, 12, 0, 65530, 12, 0, 65531, 12, 0, 65532, 12, 0, 65533, 12, 1610612736, 65534, 12, 1610612736, 65535, 12, 0, 0, 13, 0, 1, 13, 0, 2, 13, 0, 3, 13, 0, 4, 13, 0, 5, 13, 0, 6, 13, 0, 7, 13, 0, 8, 13, 0, 9, 13, 0, 10, 13, 0, 11, 13, 0, 12, 13, 0, 13, 13, 0, 14, 13, 0, 15, 13, 0, 16, 13, 0, 17, 13, 0, 18, 13, 0, 19, 13, 0, 20, 13, 0, 21, 13, 0, 22, 13, 0, 23, 13, 0, 24, 13, 0, 25, 13, 0, 26, 13, 0, 27, 13, 0, 65527, 13, 0, 65528, 13, 0, 65529, 13, 0, 65530, 13, 1610612736, 65531, 13, 0, 65532, 13, 0, 65533, 13, 0, 65534, 13, 0, 65535, 13, 0, 0, 14, 0, 1, 14, 1610612736, 2, 14, 0, 3, 14, 0, 4, 14, 0, 5, 14, 0, 6, 14, 0, 7, 14, 0, 8, 14, 0, 9, 14, 0, 10, 14, 0, 11, 14, 0, 12, 14, 0, 13, 14, 0, 14, 14, 0, 15, 14, 0, 16, 14, 0, 17, 14, 0, 18, 14, 0, 19, 14, 0, 20, 14, 0, 21, 14, 0, 22, 14, 0, 23, 14, 0, 24, 14, 0, 25, 14, 0, 26, 14, 0, 27, 14, 0, 65527, 14, 0, 65528, 14, 0, 65529, 14, 0, 65530, 14, 0, 65531, 14, 0, 65532, 14, 0, 65533, 14, 0, 65534, 14, 0, 65535, 14, -1073741824, 0, 15, 0, 1, 15, 0, 2, 15, 0, 3, 15, 0, 4, 15, 0, 5, 15, 0, 6, 15, -1073741824, 7, 15, 0, 8, 15, 0, 9, 15, 0, 10, 15, 0, 11, 15, 0, 12, 15, 0, 13, 15, 0, 14, 15, 0, 15, 15, 0, 16, 15, 0, 17, 15, 0, 18, 15, 0, 19, 15, 0, 20, 15, -1073741824, 21, 15, 0, 22, 15, 0, 23, 15, 0, 24, 15, 0, 25, 15, 0, 26, 15, -1073741824, 27, 15, 0, 65527, 15, 0, 65528, 15, 0, 65529, 15, 0, 65530, 15, 0, 65531, 15, -1073741824, 65532, 15, 0, 65533, 15, 0, 65534, 15, 0, 65535, 15, 0, 0, 16, 0, 1, 16, 0, 2, 16, 0, 3, 16, 0, 4, 16, 0, 5, 16, 0, 6, 16, 0, 7, 16, 0, 8, 16, 0, 9, 16, 0, 10, 16, 0, 11, 16, 0, 12, 16, 0, 13, 16, 0, 14, 16, 0, 15, 16, 0, 16, 16, 0, 17, 16, 0, 18, 16, 0, 19, 16, 0, 20, 16, 0, 21, 16, -1073741824, 22, 16, 0, 23, 16, 0, 24, 16, 0, 25, 16, 0, 26, 16, 0, 27, 16, 0, 65527, 16, 0, 65528, 16, 0, 65529, 16, 0, 65530, 16, 0, 65531, 16, 0, 65532, 16, 0, 65533, 16, 0, 65534, 16, 0, 65535, 16, 0, 0, 17, 0, 1, 17, 0, 2, 17, 0, 3, 17, 0, 4, 17, 0, 5, 17, 0, 6, 17, -1073741824, 7, 17, 0, 8, 17, 0, 9, 17, 0, 10, 17, 0, 11, 17, 0, 12, 17, 0, 13, 17, 0, 14, 17, 0, 15, 17, 0, 16, 17, 0, 17, 17, 0, 18, 17, -1073741824, 19, 17, 0, 20, 17, 0, 21, 17, 0, 22, 17, 0, 23, 17, 0, 24, 17, 0, 25, 17, 0, 26, 17, 0, 27, 17, 0, 65527, 17, 0, 65528, 17, 0, 65529, 17, 0, 65530, 17, 0, 65531, 17, 0, 65532, 17, 0, 65533, 17, 0, 65534, 17, 0, 65535, 17, 0, 0, 18, 0, 1, 18, 0, 2, 18, 0, 3, 18, 0, 4, 18, 0, 5, 18, 0, 6, 18, 0, 7, 18, 0, 8, 18, 0, 9, 18, 0, 10, 18, 0, 11, 18, 0, 12, 18, 0, 13, 18, 0, 14, 18, 0, 15, 18, 0, 16, 18, 0, 17, 18, 0, 18, 18, 0, 19, 18, 0, 20, 18, 0, 21, 18, 0, 22, 18, 0, 23, 18, 0, 24, 18, 0, 25, 18, 0, 26, 18, 0, 27, 18, 0, 65527, 18, 0, 65528, 18, 0, 65529, 18, 0, 65530, 18, 0, 65531, 18, 0, 65532, 18, 0, 65533, 18, 0, 65534, 18, 0, 65535, 18, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 5, 65531, 0, 6, 65531, 0, 7, 65531, 0, 8, 65531, 0, 9, 65531, 0, 10, 65531, 0, 11, 65531, 0, 12, 65531, 0, 13, 65531, 0, 14, 65531, 0, 15, 65531, 0, 16, 65531, 0, 17, 65531, 0, 18, 65531, 0, 19, 65531, 0, 20, 65531, 0, 21, 65531, 0, 22, 65531, 0, 23, 65531, 0, 24, 65531, 0, 25, 65531, 0, 26, 65531, 0, 27, 65531, 0, 65527, 65531, 0, 65528, 65531, 0, 65529, 65531, 0, 65530, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 0, 65532, 0, 1, 65532, 0, 2, 65532, 0, 3, 65532, 0, 4, 65532, 0, 5, 65532, 0, 6, 65532, 0, 7, 65532, 0, 8, 65532, 0, 9, 65532, 0, 10, 65532, 0, 11, 65532, 0, 12, 65532, 0, 13, 65532, 0, 14, 65532, 0, 15, 65532, 0, 16, 65532, 0, 17, 65532, 0, 18, 65532, 0, 19, 65532, 0, 20, 65532, 0, 21, 65532, 0, 22, 65532, 0, 23, 65532, 0, 24, 65532, 0, 25, 65532, 0, 26, 65532, 0, 27, 65532, 0, 65527, 65532, 0, 65528, 65532, 0, 65529, 65532, 0, 65530, 65532, 0, 65531, 65532, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 4, 65533, 0, 5, 65533, 0, 6, 65533, 0, 7, 65533, 0, 8, 65533, 0, 9, 65533, 0, 10, 65533, 0, 11, 65533, 0, 12, 65533, 0, 13, 65533, 0, 14, 65533, 0, 15, 65533, 0, 16, 65533, 0, 17, 65533, 0, 18, 65533, 0, 19, 65533, 0, 20, 65533, 0, 21, 65533, 0, 22, 65533, 0, 23, 65533, 0, 24, 65533, 0, 25, 65533, 0, 26, 65533, 0, 27, 65533, 0, 65527, 65533, 0, 65528, 65533, 0, 65529, 65533, 0, 65530, 65533, 0, 65531, 65533, 0, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 0, 65534, 0, 1, 65534, 0, 2, 65534, 0, 3, 65534, 0, 4, 65534, 0, 5, 65534, 0, 6, 65534, 0, 7, 65534, 0, 8, 65534, 0, 9, 65534, 0, 10, 65534, 0, 11, 65534, 0, 12, 65534, 0, 13, 65534, 0, 14, 65534, 0, 15, 65534, 0, 16, 65534, 0, 17, 65534, 0, 18, 65534, 0, 19, 65534, 0, 20, 65534, 0, 21, 65534, 0, 22, 65534, 0, 23, 65534, 0, 24, 65534, 0, 25, 65534, 0, 26, 65534, 0, 27, 65534, 0, 65527, 65534, 0, 65528, 65534, 0, 65529, 65534, 0, 65530, 65534, 0, 65531, 65534, 0, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 0, 3, 65535, 0, 4, 65535, 0, 5, 65535, 0, 6, 65535, 0, 7, 65535, 0, 8, 65535, 0, 9, 65535, 0, 10, 65535, 0, 11, 65535, 0, 12, 65535, 0, 13, 65535, 0, 14, 65535, 0, 15, 65535, 0, 16, 65535, 0, 17, 65535, 0, 18, 65535, 0, 19, 65535, 0, 20, 65535, 0, 21, 65535, 0, 22, 65535, 0, 23, 65535, 0, 24, 65535, 0, 25, 65535, 0, 26, 65535, 0, 27, 65535, 0, 65527, 65535, 0, 65528, 65535, 0, 65529, 65535, 0, 65530, 65535, 0, 65531, 65535, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="GridMap" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3, 0 )
mesh_library = ExtResource( 1 )
data = {
"cells": PoolIntArray( 0, 0, 1441796, 1, 0, 1441796, 2, 0, 1441796, 3, 0, 1441796, 4, 0, 1441796, 5, 0, 1441796, 6, 0, 1441796, 7, 0, 1441796, 8, 0, 1441796, 9, 0, 1441796, 10, 0, 1441796, 11, 0, 1441796, 12, 0, 1441796, 13, 0, 1441796, 14, 0, 1441796, 15, 0, 1441796, 16, 0, 1441796, 17, 0, 1441796, 18, 0, 1441796, 65536, 0, 3, 65537, 0, 1048577, 65538, 0, 1048576, 65539, 0, 1441792, 65540, 0, 1441792, 65541, 0, 1441792, 65542, 0, 1441792, 65543, 0, 1441792, 65544, 0, 1441792, 65545, 0, 1441792, 65546, 0, 1441792, 65547, 0, 1441792, 65548, 0, 1441792, 65549, 0, 1441792, 65550, 0, 1441792, 65551, 0, 1441792, 65552, 0, 1441792, 65553, 0, 1441793, 65554, 0, 3, 0, 1, 1441796, 1, 1, 1441796, 2, 1, 1441796, 3, 1, 1441796, 4, 1, 1441796, 5, 1, 1441796, 6, 1, 1441796, 7, 1, 1441796, 8, 1, 1441796, 9, 1, 1441796, 10, 1, 1441796, 11, 1, 1441796, 12, 1, 1441796, 13, 1, 1441796, 14, 1, 1441796, 15, 1, 1441796, 16, 1, 1441796, 17, 1, 1441796, 18, 1, 1441796, 65536, 1, 1, 65554, 1, 1, 0, 2, 1441796, 1, 2, 1441796, 2, 2, 1441796, 3, 2, 1441796, 4, 2, 1441796, 5, 2, 1441796, 6, 2, 1441796, 7, 2, 1441796, 8, 2, 1441796, 9, 2, 1441796, 10, 2, 1441796, 11, 2, 1441796, 12, 2, 1441796, 13, 2, 1441796, 14, 2, 1441796, 15, 2, 1441796, 16, 2, 1441796, 17, 2, 1441796, 18, 2, 1441796, 65536, 2, 0, 65538, 2, 2, 65540, 2, 1048578, 65542, 2, 1048578, 65544, 2, 1048578, 65546, 2, 1048578, 65548, 2, 1048578, 65550, 2, 1048578, 65552, 2, 1048578, 65554, 2, 0, 0, 3, 1441796, 1, 3, 1441796, 2, 3, 1441796, 3, 3, 1441796, 4, 3, 1441796, 5, 3, 1441796, 6, 3, 1441796, 7, 3, 1441796, 8, 3, 1441796, 9, 3, 1441796, 10, 3, 1441796, 11, 3, 1441796, 12, 3, 1441796, 13, 3, 1441796, 14, 3, 1441796, 15, 3, 1441796, 16, 3, 1441796, 17, 3, 1441796, 18, 3, 1441796, 65536, 3, 0, 65554, 3, 0, 0, 4, 1441796, 1, 4, 1441796, 2, 4, 1441796, 3, 4, 1441796, 4, 4, 1441796, 5, 4, 1441796, 6, 4, 1441796, 7, 4, 1441796, 8, 4, 1441796, 9, 4, 1441796, 10, 4, 1441796, 11, 4, 1441796, 12, 4, 1441796, 13, 4, 1441796, 14, 4, 1441796, 15, 4, 1441796, 16, 4, 1441796, 17, 4, 1441796, 18, 4, 1441796, 65536, 4, 0, 65538, 4, 2, 65540, 4, 1048578, 65542, 4, 1048578, 65544, 4, 1048578, 65546, 4, 1048578, 65548, 4, 1048578, 65550, 4, 1048578, 65552, 4, 1048578, 65554, 4, 0, 0, 5, 1441796, 1, 5, 1441796, 2, 5, 1441796, 3, 5, 1441796, 4, 5, 1441796, 5, 5, 1441796, 6, 5, 1441796, 7, 5, 1441796, 8, 5, 1441796, 9, 5, 1441796, 10, 5, 1441796, 11, 5, 1441796, 12, 5, 1441796, 13, 5, 1441796, 14, 5, 1441796, 15, 5, 1441796, 16, 5, 1441796, 17, 5, 1441796, 18, 5, 1441796, 65536, 5, 0, 65554, 5, 0, 0, 6, 1441796, 1, 6, 1441796, 2, 6, 1441796, 3, 6, 1441796, 4, 6, 1441796, 5, 6, 1441796, 6, 6, 1441796, 7, 6, 1441796, 8, 6, 1441796, 9, 6, 1441796, 10, 6, -535429116, 11, 6, 1441796, 12, 6, 1441796, 13, 6, 1441796, 14, 6, 1441796, 15, 6, 1441796, 16, 6, 1441796, 17, 6, 1441796, 18, 6, 1441796, 65536, 6, 0, 65538, 6, 2, 65540, 6, 2, 65542, 6, 2, 65544, 6, -536870910, 65546, 6, 2, 65548, 6, 1048578, 65550, 6, 1048578, 65552, 6, 1048578, 65554, 6, 0, 0, 7, 1441796, 1, 7, 1441796, 2, 7, -535429116, 3, 7, 1441796, 4, 7, 1441796, 5, 7, 1441796, 6, 7, 1441796, 7, 7, 1441796, 8, 7, 1441796, 9, 7, 1441796, 10, 7, 1441796, 11, 7, 1441796, 12, 7, 1441796, 13, 7, 1441796, 14, 7, 1441796, 15, 7, 1441796, 16, 7, 1441796, 17, 7, 1441796, 18, 7, 1441796, 65536, 7, 0, 65554, 7, 0, 0, 8, 1441796, 1, 8, 1441796, 2, 8, 1441796, 3, 8, 1441796, 4, 8, 1441796, 5, 8, 1441796, 6, 8, 1441796, 7, 8, 1441796, 8, 8, 1441796, 9, 8, 1441796, 10, 8, 1441796, 11, 8, 1441796, 12, 8, 1441796, 13, 8, 1441796, 14, 8, 1441796, 15, 8, 1441796, 16, 8, 1441796, 17, 8, 1441796, 18, 8, 1441796, 65536, 8, 0, 65538, 8, 1048578, 65540, 8, 2, 65542, 8, 2, 65544, 8, 2, 65546, 8, 2, 65548, 8, 2, 65550, 8, 2, 65552, 8, 2, 65554, 8, 0, 0, 9, 1441796, 1, 9, 1441796, 2, 9, 1441796, 3, 9, 1441796, 4, 9, 1441796, 5, 9, 1441796, 6, 9, 1441796, 7, 9, 1441796, 8, 9, 1441796, 9, 9, 1441796, 10, 9, 1441796, 11, 9, 1441796, 12, 9, 538312708, 13, 9, 1441796, 14, 9, 1441796, 15, 9, 1441796, 16, 9, 1441796, 17, 9, 1441796, 18, 9, 1441796, 65536, 9, 0, 65554, 9, 0, 0, 10, 1441796, 1, 10, 538312708, 2, 10, 1441796, 3, 10, 1441796, 4, 10, 1441796, 5, 10, 1441796, 6, 10, 1441796, 7, 10, 1441796, 8, 10, -535429116, 9, 10, 1441796, 10, 10, 1441796, 11, 10, 1441796, 12, 10, -1072300028, 13, 10, 1441796, 14, 10, 1441796, 15, 10, 538312708, 16, 10, 1441796, 17, 10, 1441796, 18, 10, 1441796, 65536, 10, 655360, 65538, 10, 1048578, 65540, 10, 2, 65542, 10, 536870914, 65544, 10, 2, 65546, 10, 536870914, 65548, 10, 536870914, 65550, 10, 536870914, 65552, 10, 536870914, 65554, 10, 0, 0, 11, 538312708, 1, 11, 1441796, 2, 11, 1441796, 3, 11, 1441796, 4, 11, 1612054532, 5, 11, 1441796, 6, 11, 1441796, 7, 11, 1441796, 8, 11, 1441796, 9, 11, 1441796, 10, 11, 1441796, 11, 11, 1441796, 12, 11, 538312708, 13, 11, 1441796, 14, 11, 1441796, 15, 11, 1441796, 16, 11, 1441796, 17, 11, 1441796, 18, 11, 1441796, 65536, 11, 655361, 65554, 11, 655361, 0, 12, 1441796, 1, 12, 1441796, 2, 12, 1441796, 3, 12, 1441796, 4, 12, 1441796, 5, 12, 1441796, 6, 12, 1441796, 7, 12, 1441796, 8, 12, 1441796, 9, 12, 1441796, 10, 12, 538312708, 11, 12, 1441796, 12, 12, 1441796, 13, 12, 1441796, 14, 12, 1441796, 15, 12, 1441796, 16, 12, 1441796, 17, 12, 1441796, 18, 12, 1441796, 65536, 12, 3, 65537, 12, 1048577, 65538, 12, 1048576, 65539, 12, 1048576, 65540, 12, 1048576, 65541, 12, 1048576, 65542, 12, 1048576, 65543, 12, 1048576, 65544, 12, 1048576, 65545, 12, 1048576, 65546, 12, 1048576, 65547, 12, 1048576, 65548, 12, 1048576, 65549, 12, 1048576, 65550, 12, 1048576, 65551, 12, 1048576, 65552, 12, 1048576, 65553, 12, 1441793, 65554, 12, 3, 65517, 65523, 4 )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -1, -3.06191e-07, 1.11444e-07, 0, 0.34202, 0.939693, -3.25841e-07, 0.939693, -0.34202, 0, 8, 0 )
shadow_enabled = true

[node name="blocks" type="Spatial" parent="."]

[node name="box" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 7 )

[node name="box2" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 7 )

[node name="box3" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 11 )

[node name="box4" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 11 )

[node name="box5" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 15 )

[node name="box6" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 17, 0, 15 )

[node name="box7" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 0, 17 )

[node name="box9" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23, 0, 9 )

[node name="box10" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 31, 0, 5 )

[node name="box11" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 31, 0, 17 )

[node name="box12" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0, 17 )

[node name="box13" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0, 9 )

[node name="box14" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 31, 0, 13 )

[node name="box15" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 15 )

[node name="box8" parent="blocks" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0, 17 )

[node name="enemies" type="Spatial" parent="."]

[node name="cam" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19, 0, 14 )

[node name="Camera" type="Camera" parent="cam"]
transform = Transform( 1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 23, 7 )
environment = ExtResource( 5 )
fov = 60.0
size = 20.55

[node name="positions" type="Spatial" parent="."]

[node name="pos0" type="Position3D" parent="positions"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0, 3 )

[node name="pos1" type="Position3D" parent="positions"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 35, 0, 23 )

[node name="pos2" type="Position3D" parent="positions"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0, 23 )

[node name="pos3" type="Position3D" parent="positions"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 35, 0, 3 )

[node name="players" type="Spatial" parent="."]

[node name="netUI" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="connected" type="Label" parent="netUI"]
margin_right = 120.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="master" type="Label" parent="netUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -120.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="ColorRect" parent="netUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0941176, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vb" type="VBoxContainer" parent="netUI/UI"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.0
margin_right = 70.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="netUI/UI/vb"]
margin_right = 140.0
margin_bottom = 127.0
size_flags_vertical = 3

[node name="Label" type="Label" parent="netUI/UI/vb"]
margin_top = 131.0
margin_right = 140.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 7 )
text = "enter name:"

[node name="pl_name" type="LineEdit" parent="netUI/UI/vb"]
margin_top = 151.0
margin_right = 140.0
margin_bottom = 177.0
custom_fonts/font = ExtResource( 7 )
placeholder_text = "3 chars min"

[node name="host" type="Button" parent="netUI/UI/vb"]
margin_top = 181.0
margin_right = 140.0
margin_bottom = 203.0
custom_fonts/font = ExtResource( 7 )
text = "create host"

[node name="join" type="Button" parent="netUI/UI/vb"]
margin_top = 207.0
margin_right = 140.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 7 )
text = "join"

[node name="Control2" type="Control" parent="netUI/UI/vb"]
margin_top = 233.0
margin_right = 140.0
margin_bottom = 360.0
size_flags_vertical = 3
[connection signal="text_changed" from="netUI/UI/vb/pl_name" to="netUI" method="_on_pl_name_text_changed"]
[connection signal="pressed" from="netUI/UI/vb/host" to="netUI" method="_on_host_pressed"]
[connection signal="pressed" from="netUI/UI/vb/join" to="netUI" method="_on_join_pressed"]
